[gd_scene load_steps=14 format=3 uid="uid://b6eegepdfdyff"]

[ext_resource type="Texture2D" uid="uid://81qd1ml1n51q" path="res://art/ui/bie_title1.png" id="1_sl1te"]
[ext_resource type="Script" uid="uid://chrvq86px0v5u" path="res://scenes/ui/menu_screens/main_menu.gd" id="1_uhagc"]
[ext_resource type="PackedScene" uid="uid://birqojqel5wh6" path="res://scenes/level_objects/assist/check_point.tscn" id="2_fe2o3"]
[ext_resource type="Texture2D" uid="uid://bkh5silbhsg3e" path="res://art/environment/background/thick_corn.png" id="4_uhagc"]
[ext_resource type="Texture2D" uid="uid://biovpcqqspods" path="res://art/environment/sky/cloudy_sky_upside_down_ground.png" id="5_btxxm"]
[ext_resource type="Theme" uid="uid://cqxg5nbvj7ylp" path="res://art/styles/standard_button.tres" id="5_dubb2"]
[ext_resource type="PackedScene" uid="uid://p2vvnaor344v" path="res://scenes/components/button_sounds.tscn" id="5_lrllm"]
[ext_resource type="PackedScene" uid="uid://dh42ej8crnk6n" path="res://scenes/ui/general_menu/location_button.tscn" id="5_q85j6"]
[ext_resource type="PackedScene" uid="uid://dfclxyqmgv5fy" path="res://scenes/ui/menu_screens/credits_menu.tscn" id="6_son0w"]
[ext_resource type="PackedScene" uid="uid://em24rq11ddm5" path="res://scenes/components/level_music_player.tscn" id="6_uhagc"]
[ext_resource type="AudioStream" uid="uid://clq3g3vpaxssv" path="res://sound/music/(Menu Screen) BIE.wav" id="7_btxxm"]
[ext_resource type="PackedScene" uid="uid://lbl56p814udm" path="res://scenes/ui/menu_screens/options_menu.tscn" id="7_r3fav"]
[ext_resource type="PackedScene" uid="uid://jhaye03ujk57" path="res://scenes/ui/menu_screens/new_game_confirmation.tscn" id="8_7f5ur"]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_uhagc")

[node name="Background" type="SubViewportContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SubViewport" type="SubViewport" parent="Background"]
handle_input_locally = false
size = Vector2i(1152, 648)
render_target_update_mode = 4

[node name="Parallax2D4" type="Parallax2D" parent="Background/SubViewport"]
z_index = -50
scroll_scale = Vector2(0.3, 0.3)
scroll_offset = Vector2(0, 64)
repeat_size = Vector2(1152, 0)
repeat_times = 3

[node name="Sprite2D" type="Sprite2D" parent="Background/SubViewport/Parallax2D4"]
modulate = Color(0.172833, 0.172833, 0.172833, 1)
position = Vector2(13, -352)
scale = Vector2(0.6, 0.6)
texture = ExtResource("4_uhagc")
centered = false

[node name="Parallax2D3" type="Parallax2D" parent="Background/SubViewport"]
z_index = -50
scroll_scale = Vector2(0.5, 0.5)
scroll_offset = Vector2(0, 64)
repeat_size = Vector2(1920, 0)

[node name="Sprite2D" type="Sprite2D" parent="Background/SubViewport/Parallax2D3"]
modulate = Color(0.20871, 0.20871, 0.20871, 1)
position = Vector2(-139, -559)
texture = ExtResource("4_uhagc")
centered = false

[node name="Parallax2D2" type="Parallax2D" parent="Background/SubViewport"]
z_index = -50
scroll_scale = Vector2(0.8, 0.8)
repeat_size = Vector2(1920, 0)

[node name="Sprite2D" type="Sprite2D" parent="Background/SubViewport/Parallax2D2"]
modulate = Color(0.450649, 0.450648, 0.450648, 1)
position = Vector2(-139, -538)
texture = ExtResource("4_uhagc")
centered = false

[node name="Sky" type="CanvasLayer" parent="Background/SubViewport"]
layer = -1

[node name="Sprite2D" type="Sprite2D" parent="Background/SubViewport/Sky"]
position = Vector2(580.5, 319.5)
scale = Vector2(1.04253, 1.03549)
texture = ExtResource("5_btxxm")

[node name="Camera2D" type="Camera2D" parent="Background/SubViewport"]
position = Vector2(0, -400)

[node name="Title" type="TextureRect" parent="."]
offset_left = 244.0
offset_top = 27.0
offset_right = 930.0
offset_bottom = 413.0
texture = ExtResource("1_sl1te")
expand_mode = 1

[node name="ButtonContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(500, 0)
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -250.0
offset_top = -298.0
offset_right = 250.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 0

[node name="Continue" type="Button" parent="ButtonContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme = ExtResource("5_dubb2")
text = "Continue"

[node name="ButtonSounds" parent="ButtonContainer/Continue" instance=ExtResource("5_lrllm")]

[node name="NewGameWarning" parent="ButtonContainer" instance=ExtResource("5_q85j6")]
layout_mode = 2
text = "New Game"
location = ExtResource("8_7f5ur")

[node name="NewGame" type="Button" parent="ButtonContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme = ExtResource("5_dubb2")
text = "New Game"

[node name="ButtonSounds" parent="ButtonContainer/NewGame" instance=ExtResource("5_lrllm")]

[node name="Credits" parent="ButtonContainer" instance=ExtResource("5_q85j6")]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Credits"
location = ExtResource("6_son0w")

[node name="Options" parent="ButtonContainer" instance=ExtResource("5_q85j6")]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Options"
location = ExtResource("7_r3fav")

[node name="CheckPoint" parent="." instance=ExtResource("2_fe2o3")]
position = Vector2(160, 476)
scale = Vector2(1.5, 1.5)

[node name="Label" parent="CheckPoint" index="5"]
offset_left = -50.6667
offset_top = -76.0
offset_right = 235.333
offset_bottom = -7.0
theme_override_font_sizes/font_size = 30
text = "Dammit!"

[node name="SecretButton" type="Button" parent="CheckPoint"]
modulate = Color(1, 1, 1, 0)
offset_left = -21.0
offset_top = -101.0
offset_right = 75.0
offset_bottom = 13.0

[node name="LevelMusicPlayer" parent="." instance=ExtResource("6_uhagc")]
music = ExtResource("7_btxxm")

[connection signal="pressed" from="ButtonContainer/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="ButtonContainer/NewGame" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="CheckPoint/SecretButton" to="." method="_on_secret_button_pressed"]

[editable path="CheckPoint"]
